k8s/rookio/ceph/dashboard-external-https.yaml
apiVersion: v1
kind: Service
metadata:
  name: rook-ceph-mgr-dashboard-external-https
  namespace: rook-ceph
  labels:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
spec:
  externalIPs:
    - 192.168.33.16
  ports:
    - name: dashboard
      port: 8443
      protocol: TCP
      targetPort: 8443
      nodePort: 31176
  selector:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
  sessionAffinity: None
  type: NodePort
